Fix align problems in contact section

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,8 +43,6 @@
   color: #ffffff;
 }
 
-
-
 // Config to Navbar icons collapsed
 .navbar-collapse {
   text-align: center;
@@ -136,6 +134,14 @@
   font-family: $font-title;
   margin-bottom: 6%;
 }
+
+ p {
+   .fa-map-marker, .fa-envelope-o {
+     font-size: 2.5em;
+     margin-right: 3%;
+     color: #5f5f5f;
+   }
+ }
 
 // Social icon (contact_icon) config  --> https://tympanus.net/codrops/2013/05/30/simple-icon-hover-effects/
  .contact_icon {
